updated for altschool project

--- a/hitesh.html
+++ b/hitesh.html
@@ -6,11 +6,15 @@
   <title>Document</title>
 </head>
 <body>
-  You are worthy my redeemer you are worthy
+  <h1>Ubah Geovanni - Lead Cloud Engineer</h1>
+
+  <h2>Vocational training for the future</h2>
+
+  The reasons why this project is innovative
   <ul>
-    <li>who am i</li>
-    <li>no vex me</li>
-    <li> Here we go, still testing git and github</li>
+    <li>The world will always need vocational jobs</li>
+    <li>AI will only influence the white collar jobs</li>
+    <li> Africa still has a lot of catching up to do</li>
   </ul>
 </body>
 </html>
